# mlops-mini-project

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  setup.py
.dvc/: config
.github/workflows/: ci.yaml
docs/: conf.py  index.rst
flask_app/: app.py  preprocessing_utility.py
flask_app/templates/: index.html
notebooks/: dagshub_setup.py  exp1_baseline_model.ipynb  exp1_bow_vs_tfidf.py  exp3_lor_bow_hp.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py
src/model/: model_building.py  model_evaluation.py  register_model.py
