[project]
name = "mlops-mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.45.37",
    "dagshub>=0.7.0",
    "dvc[s3]>=2.1.0",
    "flask>=3.1.3",
    "ipykernel>=7.3.0",
    "mlflow>=3.14.0",
    "nbconvert>=7.17.1",
    "nltk>=3.9.4",
    "notebook>=7.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
]
